--- a/styles/common.module.scss
+++ b/styles/common.module.scss
@@ -6,3 +6,24 @@
     background-color: rgb(37 99 235);
     border-radius: 1rem;
 }
+.swiperbuttonprev,.swiperbuttonnext{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background-color: #000;
+    color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+}
+.swiperbuttonprev{
+    left: 10px;
+}
+.swiperbuttonnext{
+    right: 10px;
+}
