--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@500&family=Poppins&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
